--- a/style.css
+++ b/style.css
@@ -99,3 +99,53 @@ div>h4{
     cursor:pointer;
     font-weight:100;
 }
+@media screen and (max-width:480px){
+    
+    .form{
+    
+       position: absolute;
+       top:15%;
+       right:10%;
+       width:290px;
+    }
+    .form-flex input[type="email"]{
+        width:250px;
+    }
+    .form-flex > .password{
+        width:250px;
+    }
+    .button{
+        width:250px;
+    }
+    .facebook{
+        border:1px solid black;
+        /* height:40px; */
+        width:100px;
+        background-color: rgb(53, 53, 157);
+        color:white;
+        border-radius:4px;
+        padding:10px;
+        text-align: center;
+        cursor: pointer;
+        margin-left: 10px;;
+    }
+
+    .google{
+        border:1px solid black;
+        /* height:40px; */
+        width:100px;
+        background-color:azure;
+        border-radius: 4px;;
+        padding:10px;
+        text-align:center;
+        cursor: pointer;
+        margin-right: 10px;;
+    }
+    .facebook:hover{
+        scale: 1.1;
+    }
+    
+    .google:hover{
+        scale: 1.1;
+    }
+}
